# test

c/: remove_dir  remove_dir.c
c/code/Arguments_1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash
c/code/Arguments_1/src/: args  args.c
c/code/CppApplication_1/: main.c
c/code/CppApplication_1/nbproject/: configurations.xml
c/code/CppApplication_2/: Makefile  main.c
c/code/CppApplication_2/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  (+1 more)
c/code/CppApplication_3/: main.c
c/code/MP_1/: mp
c/code/head/: .cproject  .project  CMakeLists.txt  main.c  stack.c  stack.h
c/code/head/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
c/code/head/nbproject/private/: private.xml
c/code/head/tests/: newcunittest.c  newcunittest1.c  newcunittest2.c  newcunittest3.c  newsimpletest.c
c/code/moudle01/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  .hello.o.d  Makefile  Module.symvers  hello.c  hello.ko  hello.mod.c  modules.order
c/code/moudle02/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  CMakeLists.txt  Module.symvers  hello.c  hello.ko  hello.mod.c  modules.order
c/code/test/: sort.go  test
c/code/test_arry/: main  main.c
go/: e.go  pai.go  work.go
pdf/: ubi.ppt  深入浅出rust.7z  禅与摩托车修理技术.7z  自由主义与正义的局限 by [美]M.桑德尔 万俊人 等(译) (z-lib.org).7z.003  计算机体系结构：量化研究方法（中文第五版）_扫描版_23.5M.7z.003
python_TensorFlow/1/: 001.py  002.py  003.py  004.py  005.py  007.py  009.py
vscode/: vscode_2.7z.013
(+36 files in other folders)
